--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,22 +1,90 @@
-// This is where your styles can go :)
-// the existing styles are just a placeholder, feel free to delete :)
-
-* {
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
+:root {
+  font-family: 'Alumni Sans Pinstripe', sans-serif;
+}
+*,
+*:before,
+*:after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  display: grid;
   height: 100vh;
-  font-family: sans-serif;
+  max-width: 100vw;
+  background-color: rgb(32 34 55);
+  display: grid;
+  place-items: center;
 }
 
 main {
-  margin: auto;
-  text-align: center;
-  animation: rota 10s infinite linear;
+  display: grid;
+  // grid-template-columns: 1fr 1.5fr;
+  width: 100%;
+  max-width: 450px;
 }
 
-@keyframes rota {
-  100% { transform: rotate(360deg) }
+#left-container {
+  background-image: url('../images/photo-1513569771920-c9e1d31714af.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 50rem;
+  display: grid;
+  place-items: center;
+  > #clock {
+    display: grid;
+    color: white;
+  }
+
+  .lbl-group,
+  .inp-group {
+    display: inline-block;
+    width: 25%;
+    text-align: center;
+  }
+  .lbl-group {
+    color: white;
+    font-size: 1.35rem;
+    text-transform: capitalize;
+  }
+  #inp-container {
+    margin-bottom: 2rem;
+  }
+  .inp-group {
+    background-color: black;
+    border: none;
+    border: 1px solid rgb(255 0 0 / 0.4);
+    font-size: 2rem;
+    color: white;
+  }
+  button {
+    //TODO: CHECK WHY MARGIN-TOP IS NOT WORKING
+    margin-top: 1rem;
+    font-family: 'Alumni Sans Pinstripe', sans-serif;
+    background-color: black;
+    padding: 0.5rem 0.75rem;
+    color: white;
+    font-size: 1.25rem;
+    border-radius: 1em;
+    border: 1px solid transparent;
+    display: block;
+    margin: auto;
+
+    transition: border 0.5s linear;
+    > &:hover {
+      border: 1px solid rgb(255 0 0 / 0.75);
+    }
+  }
+  .counter-text {
+    color: white;
+    font-size: 2.5rem;
+  }
+}
+
+#right-container {
+  background-color: rgb(32, 34, 55);
+  > button {
+    background-color: transparent;
+  }
 }
